<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".UpdateActivity">

    <TextView
        android:id="@+id/tv_update_judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:paddingVertical="24dp"
        android:text="@string/update_contact"
        android:textColor="@color/purple_700"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_update_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="12dp"
        android:text="@string/nama"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_update_judul" />

    <EditText
        android:id="@+id/edt_update_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputkan_nama"
        app:layout_constraintTop_toBottomOf="@id/tv_update_nama" />

    <TextView
        android:id="@+id/tv_update_telepon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="12dp"
        android:text="@string/nomor_telepon"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/edt_update_nama" />

    <EditText
        android:id="@+id/edt_update_telepon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputkan_nomor_telepon"
        app:layout_constraintTop_toBottomOf="@id/tv_update_telepon" />

    <Button
        android:id="@+id/btn_update_simpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/purple_700"
        android:text="@string/update_data"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/edt_update_telepon" />

</androidx.constraintlayout.widget.ConstraintLayout>